9.Ingress/example3/deploy.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app-2
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: httpd:latest
      ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 80 # Default port for image
